<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <!-- Scrollable Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/tv_version"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_sale_trans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_consume" />

            <Button
                android:id="@+id/btn_void"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_void" />

            <Button
                android:id="@+id/btn_refund_trans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_refund" />

            <Button
                android:id="@+id/btn_cash_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_cash_back"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_authorization_trans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_preauth" />

            <Button
                android:id="@+id/btn_completion_trans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_preauth_complete" />

            <Button
                android:id="@+id/btn_query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/query" />

            <Button
                android:id="@+id/btn_tip_adjustment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_tip_adjustment" />

            <Button
                android:id="@+id/btn_batch_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_batch_close" />
        </LinearLayout>
    </ScrollView>

    <!-- Version at Bottom -->
    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/main_version" />

</RelativeLayout>
