<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_ori_business_order_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/void_ori_business_order_no"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="1234567890."
        android:hint="@string/input_amount"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_tip_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="1234567890."
        android:hint="@string/consume_input_tip"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_auth_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_auth_code"
        android:inputType="text"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <CheckBox
            android:id="@+id/cb_signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="screen signature" />

        <View
            android:layout_width="30dp"
            android:layout_height="0dp" />

        <CheckBox
            android:id="@+id/cb_not_read_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Skip card read" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Print:"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/option_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="No print" />

            <RadioButton
                android:id="@+id/option_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Merchant" />

            <RadioButton
                android:id="@+id/option_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CardHolder" />

            <RadioButton
                android:id="@+id/option_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="All" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_start_trans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_preauth_complete" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="#3f30" />

</LinearLayout>